# live-ml-project

./: .dvcignore  .env.example  .flake8  .gitignore  Makefile  README.md  dvc.yaml  environment.yml  pyproject.toml  test_mlflow.db
.github/workflows/: gcp-pipeline.yml  main.yml
infra/: Dockerfile  docker-compose.yml
infra/gcp/: setup.sh
scripts/: bootstrap_model.py  evaluate_model.py  promote_champion.py  run_experiment.py
src/api/: dependencies.py  main.py  schemas.py
src/api/routes/: health.py  metrics.py  predict.py
src/config/: settings.py
src/data_ingestion/: __init__.py  alpha_vantage.py  base.py  factory.py  twelve_data.py
src/features/: __init__.py  engineering.py
src/models/: __init__.py  evaluation.py  experiment.py  model_zoo.py  online_model.py  registry.py  signal_labeler.py
src/observability/: logging.py
src/validation/: __init__.py  data_drift.py  data_quality.py
tests/: conftest.py  test_api.py  test_data_ingestion.py  test_experiment.py  test_features.py  test_model_quality.py  test_models.py  test_validation.py
